--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
           </li>
         </ul>
       </section>
-      <section class="training-types">
+      <section class="training-types container-wide">
         <h2 class="visually-hidden">Types of training</h2>
         <ul class="training-types-list">
           <li class="training-types-item">
@@ -274,6 +274,32 @@
               </button>
             </div>
           </form>
+        </div>
+      </section>
+      <section class="location container-wide">
+        <img
+          src="./images/Map.jpg"
+          alt=""
+          class="location-map-image"
+          alt="branches on the map"
+          width="960"
+          height="600"
+          loading="lazy"
+        />
+        <div class="location-body">
+          <h2
+            class="location-title title-medium backdrop-title centered"
+            data-title="Look"
+          >
+            Find us near you
+          </h2>
+          <div class="location-description">
+            <p>
+              Nec suas signiferumque id. An eum labore commodo principes. Usu
+              diam noluisse cu, nam adipisci
+            </p>
+          </div>
+          <a href="/" class="location-button button transparent">View more</a>
         </div>
       </section>
     </main>
