--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
                 Start here
               </h3>
 
-              <div class="join-us-form-subtitle">
+              <div class="join-us-form-subtitle section-description">
                 fill the form below to start your journey
               </div>
             </header>
@@ -300,6 +300,81 @@
             </p>
           </div>
           <a href="/" class="location-button button transparent">View more</a>
+        </div>
+      </section>
+      <div class="family">
+        <header class="family-header container">
+          <h2
+            class="family-title title-big backdrop-title centered"
+            data-title="PART"
+          >
+            be a part of our fit family
+          </h2>
+          <div class="family-description section-description">
+            <p>Training helps you think and feel better. join us!</p>
+          </div>
+        </header>
+        <div class="family-body container-wide">
+          <img
+            src="./images/family-1.jpg"
+            alt="training people"
+            width="414"
+            height="479"
+            loading="lazzy"
+            class="family-image"
+          />
+          <img
+            src="./images/family-2.jpg"
+            alt="training people"
+            width="744"
+            height="479"
+            loading="lazzy"
+            class="family-image"
+          />
+          <img
+            src="./images/family-3.jpg"
+            alt="training people"
+            width="396"
+            height="479"
+            loading="lazzy"
+            class="family-image"
+          />
+          <img
+            src="./images/family-4.jpg"
+            alt="training people"
+            width="396"
+            height="479"
+            loading="lazzy"
+            class="family-image"
+          />
+          <img
+            src="./images/family-5.jpg"
+            alt="training people"
+            width="414"
+            height="479"
+            loading="lazzy"
+            class="family-image"
+          />
+        </div>
+      </div>
+
+      <section class="calculate">
+        <div class="calculate-inner container">
+          <div class="calculate-body">
+            <h2
+              class="calculate-title title-medium backdrop-title"
+              data-title="BMI"
+            >
+              Input your BMI
+            </h2>
+            <div class="calculate-description">
+              <p>
+                Duo graece ponderum ne, ei mel aliquando. Pro te tamquam
+                nonumes, nam no nemore epicurei
+              </p>
+            </div>
+          </div>
+          <div class="calculate-table-wrapper"></div>
         </div>
       </section>
     </main>
