--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
                 type="email"
               />
               <button
-                type="submit"
+                type="sumbit"
                 class="join-us-form-button button transparent"
               >
                 Subscribe
@@ -373,8 +373,94 @@
                 nonumes, nam no nemore epicurei
               </p>
             </div>
+            <form class="calculate-form">
+              <div class="calculate-form-body">
+                <label class="visually-hidden" for="height">Height</label>
+                <input
+                  class="calculate-input input"
+                  id="height"
+                  type="number"
+                  placeholder="Height / cm"
+                />
+                <label class="visually-hidden" for="weight">Weight</label>
+                <input
+                  class="calculate-input input"
+                  id="weight"
+                  type="number"
+                  placeholder="Weight / kg"
+                />
+                <label class="visually-hidden" for="age">Age</label>
+                <input
+                  class="calculate-input input"
+                  id="age"
+                  type="number"
+                  placeholder="Age"
+                />
+                <label class="visually-hidden" for="gender"
+                  >Activity-factor</label
+                >
+                <select id="gender" class="calculate-input input" required>
+                  <option value="" disabled selected>Gender</option>
+                  <option value="male">Male</option>
+                  <option value="female">Female</option>
+                </select>
+                <label class="visually-hidden" for="activity-factor"
+                  >Gender</label
+                >
+                <select
+                  id="activity-factor"
+                  class="calculate-input input wide"
+                  required
+                >
+                  <option value="" disabled selected>
+                    Select an activity factor
+                  </option>
+                  <option value="1">1</option>
+                  <option value="2">2</option>
+                </select>
+              </div>
+              <button class="calculate-button button transparent" type="sumbit">
+                Calculate
+              </button>
+            </form>
           </div>
-          <div class="calculate-table-wrapper"></div>
+          <div class="calculate-table-wrapper">
+            <div class="calculate-table-wrapper">
+              <table class="calculate-table">
+                <thead>
+                  <tr>
+                    <th>BMI</th>
+                    <th>Weight status</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td>Below 18.5</td>
+                    <td>Underweight</td>
+                  </tr>
+                  <tr>
+                    <td>18.5 - 24.9</td>
+                    <td>Healthy</td>
+                  </tr>
+                  <tr>
+                    <td>25.0 - 29.9</td>
+                    <td>Overweight</td>
+                  </tr>
+                  <tr>
+                    <td>30.0 - and Above</td>
+                    <td>Obese</td>
+                  </tr>
+                </tbody>
+                <tfoot>
+                  <tr>
+                    <td colspan="2">
+                      <b>BMR</b> Metabolic Rate / <b>BMI</b> Body Mass Index
+                    </td>
+                  </tr>
+                </tfoot>
+              </table>
+            </div>
+          </div>
         </div>
       </section>
     </main>
